--- a/public/music/style.css
+++ b/public/music/style.css
@@ -1,7 +1,7 @@
 /* [Master Stylesheet - v1.0] */
 /* =========== Index of CSS ===========
 :: 1.0 Import Fonts
-:: 2.0 Import All CSS 
+:: 2.0 Import All CSS
 :: 3.0 Base CSS
     :: 3.1.0 Spacing
     :: 3.2.0 Height
@@ -1922,3 +1922,6 @@ img {
 /* ====== The End ====== */
 
 /*# sourceMappingURL=style.css.map */
+owl-carousel .owl-item img {
+    width: 100% !important;
+}
